fix button overlapping issue on devices with small screen

--- a/extension/ui/pages/editor.css
+++ b/extension/ui/pages/editor.css
@@ -21,6 +21,7 @@ body {
     display: flex;
     flex-direction: row;
     margin: 1px;
+    flex: none;
 }
 
 img[type=button] {
